// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

import "google/protobuf/timestamp.proto";
import "google/type/date.proto";
import "google/type/interval.proto";
import "wfa/measurement/api/v2alpha/exchange_step.proto";
import "wfa/measurement/api/v2alpha/measurement.proto";
import "wfa/measurement/api/v2alpha/model_line.proto";
import "wfa/measurement/api/v2alpha/requisition.proto";

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;

message ListCertificatesPageToken {
  message ParentKey {
    oneof external_parent_id {
      fixed64 external_data_provider_id = 1;
      fixed64 external_measurement_consumer_id = 2;
      string external_duchy_id = 3;
      fixed64 external_model_provider_id = 4;
    }
  }
  ParentKey parent_key = 1;
  repeated bytes subject_key_identifiers = 2;

  message PreviousPageEnd {
    google.protobuf.Timestamp not_valid_before = 1;
    fixed64 external_certificate_id = 2;
    ParentKey parent_key = 3;
  }
  PreviousPageEnd last_certificate = 3;
}

message ListEventGroupsPageToken {
  reserved 1;

  oneof external_parent_id {
    fixed64 external_data_provider_id = 2;
    fixed64 external_measurement_consumer_id = 6;
  }
  repeated fixed64 external_data_provider_ids = 7;
  repeated fixed64 external_measurement_consumer_ids = 3;
  bool show_deleted = 5;

  message PreviousPageEnd {
    fixed64 external_data_provider_id = 1;
    fixed64 external_event_group_id = 2;
  }
  PreviousPageEnd last_event_group = 4;
}

message ListEventGroupMetadataDescriptorsPageToken {
  int32 page_size = 1;
  fixed64 external_data_provider_id = 2;
  message PreviousPageEnd {
    fixed64 external_data_provider_id = 1;
    fixed64 external_event_group_metadata_descriptor_id = 2;
  }
  PreviousPageEnd last_event_group_metadata_descriptor = 3;
}

message ListMeasurementsPageToken {
  int32 page_size = 1;
  fixed64 external_measurement_consumer_id = 2;
  repeated Measurement.State states = 3;
  message PreviousPageEnd {
    google.protobuf.Timestamp update_time = 1;
    fixed64 external_measurement_id = 2;
  }
  PreviousPageEnd last_measurement = 4;
}

message ListRequisitionsPageToken {
  reserved 1;

  fixed64 external_measurement_consumer_id = 2;
  fixed64 external_measurement_id = 3;
  fixed64 external_data_provider_id = 4;
  repeated Requisition.State states = 5;
  message PreviousPageEnd {
    fixed64 external_data_provider_id = 1;
    fixed64 external_requisition_id = 2;
  }
  PreviousPageEnd last_requisition = 6;
  repeated Measurement.State measurement_states = 7;
}

message ListExchangeStepsPageToken {
  /* Filter fields */

  fixed64 external_recurring_exchange_id = 1;
  repeated google.type.Date dates = 2;
  repeated ExchangeStep.State states = 3;
  fixed64 external_data_provider_id = 4;
  fixed64 external_model_provider_id = 5;

  message PreviousPageEnd {
    fixed64 external_recurring_exchange_id = 1;
    google.type.Date date = 2;
    int32 step_index = 3;
  }
  PreviousPageEnd last_exchange_step = 6;
}

message ListModelSuitesPageToken {
  int32 page_size = 1;
  fixed64 external_model_provider_id = 2;
  message PreviousPageEnd {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    google.protobuf.Timestamp create_time = 3;
  }
  PreviousPageEnd last_model_suite = 4;
}

message ListModelReleasesPageToken {
  int32 page_size = 1;
  fixed64 external_model_provider_id = 2;
  fixed64 external_model_suite_id = 3;
  message PreviousPageEnd {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    fixed64 external_model_release_id = 3;
    google.protobuf.Timestamp create_time = 4;
  }
  PreviousPageEnd last_model_release = 4;
}

message ListModelLinesPageToken {
  int32 page_size = 1;
  fixed64 external_model_provider_id = 2;
  fixed64 external_model_suite_id = 3;
  repeated ModelLine.Type types = 4;
  message PreviousPageEnd {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    fixed64 external_model_line_id = 3;
    google.protobuf.Timestamp create_time = 4;
  }
  PreviousPageEnd last_model_line = 5;
}

message ListModelShardsPageToken {
  int32 page_size = 1;
  fixed64 external_data_provider_id = 2;
  fixed64 external_model_provider_id = 3;
  message PreviousPageEnd {
    fixed64 external_data_provider_id = 1;
    fixed64 external_model_shard_id = 2;
    google.protobuf.Timestamp create_time = 3;
  }
  PreviousPageEnd last_model_shard = 4;
}

message ListModelOutagesPageToken {
  int32 page_size = 1;
  fixed64 external_model_provider_id = 2;
  fixed64 external_model_suite_id = 3;
  fixed64 external_model_line_id = 4;
  google.type.Interval outage_interval = 5;
  message PreviousPageEnd {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    fixed64 external_model_line_id = 3;
    fixed64 external_model_outage_id = 4;
    google.protobuf.Timestamp create_time = 5;
  }
  PreviousPageEnd last_model_outage = 6;
  bool show_deleted = 7;
}

message ListModelRolloutsPageToken {
  int32 page_size = 1;
  fixed64 external_model_provider_id = 2;
  fixed64 external_model_suite_id = 3;
  fixed64 external_model_line_id = 4;
  google.type.Interval rollout_period_overlapping = 5;
  message PreviousPageEnd {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    fixed64 external_model_line_id = 3;
    fixed64 external_model_rollout_id = 4;
    google.protobuf.Timestamp rollout_period_start_time = 5;
  }
  PreviousPageEnd last_model_rollout = 6;
}
