// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ModelOutage entity type.
message ModelOutage {
  fixed64 external_model_provider_id = 1;
  fixed64 external_model_suite_id = 2;
  fixed64 external_model_line_id = 3;
  fixed64 external_model_outage_id = 4;

  google.protobuf.Timestamp model_outage_start_time = 5;
  google.protobuf.Timestamp model_outage_end_time = 6;

  // Possible states of ModelOutage.
  enum State {
    // The default value if state is omitted. Should not be used.
    STATE_UNSPECIFIED = 0;
    // The ModelOutage has been created.
    ACTIVE = 1;
    // The ModelOutage has been deleted. This state is terminal.
    DELETED = 2;
  }
  // ModelOutage state. Output-only.
  State state = 7;

  // When the ModelOutage was created. Output-only.
  google.protobuf.Timestamp create_time = 8;
  // When the ModelOutage was deleted. Output-only.
  google.protobuf.Timestamp delete_time = 9;
}
